# psysonic-2026

./: .dependency-cruiser-known-violations.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  WHATS_NEW.md  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/scripts/: ci-ok-aggregate.mjs  ci-ok-aggregate.test.mjs
.github/workflows/: promote-main-to-next.yml  reusable-channel-publish.yml
nix/: upstream-sources.json
public/: startup-splash-reveal.js
scripts/: check-boot-chunk-lucide.mjs  generate-release-notes-bundle.mjs
src/: App.tsx  hotCachePrefetch.ts  i18n.ts  localPlaybackInvalidation.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/psysonic-analysis/src/: analysis_runtime.rs
src-tauri/crates/psysonic-audio/: build.rs
src-tauri/crates/psysonic-audio/src/: commands.rs  decode.rs  device_resume.rs  device_watcher.rs  engine.rs  helpers.rs  play_input.rs  preload_commands.rs  preview.rs  progress_task.rs  radio_commands.rs  sink_swap.rs  source_build.rs  sources.rs  stream_idle.rs
src-tauri/crates/psysonic-audio/src/stream/: mod.rs  mp4.rs  ranged_http.rs  track_stream.rs
src-tauri/crates/psysonic-core/: Cargo.toml
src-tauri/crates/psysonic-core/src/: cover_cache_layout.rs  lib.rs  log_sanitize.rs  server_http.rs
src-tauri/crates/psysonic-integration/src/: remote.rs
src-tauri/crates/psysonic-integration/src/navidrome/: client.rs  covers.rs  mod.rs  playlists.rs  probe.rs  queries.rs  users.rs
src-tauri/crates/psysonic-integration/src/subsonic/: client.rs  mod.rs
src-tauri/crates/psysonic-library/: Cargo.toml
src-tauri/crates/psysonic-library/migrations/: 002_album_browse_index.sql  010_genre_album_browse_index.sql  011_genre_album_name_browse_index.sql  018_artist_synced_index.sql
src-tauri/crates/psysonic-library/src/: advanced_search.rs  album_browse.rs  album_compilation_filter.rs  artist_lossless_browse.rs  browse_support.rs  commands.rs  cover_backfill.rs  cover_resolve.rs  dto.rs  genre_album_browse.rs  lib.rs  live_search.rs  lossless_albums.rs  orphan_cleanup.rs  scope_merge.rs  scope_statistics.rs  search.rs  store.rs
src-tauri/crates/psysonic-library/src/identity/: mod.rs
src-tauri/crates/psysonic-library/src/repos/: track.rs
src-tauri/crates/psysonic-library/src/repos/play_session/: mod.rs  tests.rs
src-tauri/crates/psysonic-library/src/server_cluster/: advanced_search.rs  detail.rs  library_scope.rs  list.rs  list_albums.rs  list_artists.rs  list_favorites.rs  merge.rs  mod.rs  play_stats.rs  priority.rs  resolve.rs  search.rs
src-tauri/crates/psysonic-library/src/sync/: album_metadata.rs  artist_index.rs  capability.rs  delta.rs  initial.rs  mapping.rs  mod.rs  scheduler.rs
src-tauri/crates/psysonic-syncfs/src/: file_transfer.rs
src-tauri/crates/psysonic-syncfs/src/cache/: downloads.rs  hot.rs  local.rs  offline.rs
src-tauri/crates/psysonic-syncfs/src/sync/: batch.rs  device.rs
src-tauri/patches/symphonia-format-isomp4/src/: demuxer.rs
src-tauri/src/: lib.rs
src-tauri/src/audio/: commands.rs
src-tauri/src/cover_cache/: backfill_worker.rs  external.rs  external_ensure.rs  fetch.rs  mod.rs
src-tauri/src/lib_commands/app_api/: core.rs  integration.rs  mod.rs  network.rs
src-tauri/src/lib_commands/sync/: tray.rs
src-tauri/src/lib_commands/ui/: mini.rs
src/api/: analysis.ts  coverCache.ts  library.ts  navidromeBrowse.ts  network.ts  subsonic.async.test.ts  subsonic.contract.test.ts  subsonic.scheduleProbe.test.ts  subsonic.ts  subsonicArtists.ts  subsonicClient.ts  subsonicEntityWithCredentials.ts  subsonicGenres.ts  subsonicLibrary.ts  subsonicOpenSubsonic.test.ts  subsonicOpenSubsonic.ts  subsonicRatings.test.ts  subsonicRatings.ts  subsonicScrobble.ts  subsonicStarRating.ts  subsonicStreamUrl.ts  subsonicTypes.ts
src/app/: AppRoutes.tsx  AppShell.tsx  ConnectionIndicator.tsx  FpsOverlay.tsx  MainApp.tsx  MiniPlayerApp.test.tsx  MiniPlayerApp.tsx  TauriEventBridge.tsx  bootstrap.ts  lazyRoutes.smoke.test.ts  musicLibraryCatalogReloadBridge.test.ts  musicLibraryCatalogReloadBridge.ts  musicNetworkBridge.ts  startupSplash.test.ts  startupSplash.ts
src/components/: AlbumCard.tsx  AlbumHeader.test.tsx  AlbumHeader.tsx  AlbumRow.tsx  AppUpdater.tsx  ArtistCardLocal.tsx  BecauseYouLikeRail.tsx  BottomNav.tsx  ClusterMergeBanner.tsx  ConfirmDialog.tsx  ConnectionIndicator.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DownloadFolderModal.tsx  Equalizer.tsx  ExportPickerModal.tsx  FpsOverlay.tsx  FullscreenPlayer.tsx  GenreFilterBar.tsx  Hero.tsx  LosslessFilterButton.tsx  LyricsPane.tsx  MarqueeText.tsx  MobilePlayerView.tsx  Modal.tsx  MusicNetworkIndicator.tsx  NowPlayingDropdown.tsx  OrbitDiagnosticsPopover.tsx  OrbitReconnectModal.tsx  OrbitSessionBar.tsx  OrbitSharePopover.tsx  OrbitStartModal.tsx  OrbitStartTrigger.tsx  OverlayScrollArea.tsx  PagedSongList.tsx  PasteClipboardHandler.tsx  PlayerBar.test.tsx  PlayerBar.tsx  QueuePanel.test.tsx  QueuePanel.tsx  (+13 more)
src/config/: settingsCredits.ts  shortcutDispatch.ts
src/constants/: appScroll.ts
src/cover/: CoverArtImage.tsx  TrackRowCoverThumb.tsx  diskSrcCache.test.ts  diskSrcCache.ts  diskSrcLookup.ts  ensureQueue.test.ts  fetchUrl.ts  layoutSizes.ts  prefetchStrategy.ts  resolveEntry.test.ts  resolveEntry.ts  resolveEntryLibrary.ts  serverScope.ts  storageKeys.ts  tiers.test.ts  tiers.ts  useCoverArtPrefetch.ts  useLibraryCoverBackfill.ts  useLibraryCoverRef.ts  useTrackListCoverArtSettings.ts  useWarmTrackListAlbumCovers.test.ts  useWarmTrackListAlbumCovers.ts  wakeCoverBackfillForMissingTrack.test.ts  wakeCoverBackfillForMissingTrack.ts  warmDiskPeek.ts
src/hooks/: useAlbumBrowseData.ts  useAlbumBrowseScrollRestore.ts  useAlbumDetailData.ts  useArtistDetailData.test.ts  useArtistDetailData.ts  useArtistSimilarArtists.ts  useBrowseAlbumTextSearch.test.ts  useBrowseAlbumTextSearch.ts  useClusterMusicFolders.ts  useClusterPlaybackMonitor.ts  useComposersBrowseFilters.ts  useConnectionStatus.test.ts  useConnectionStatus.ts  useCoverPerfListener.ts  useListReorderDnd.ts  (+29 more)
(+1322 files in other folders)
